--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,9 @@
+- timestamp: 7/18/2022, 3:31:14 PM
+  text: "Estos recursos"
+  link:
+  cat: resources
+
+
 - timestamp: 6/2/2022, 8:27:25 AM
   text: "Muy interesante y curiosa la web www.oldmapsonline.org para buscar mapas antiguos."
   link: https://www.oldmapsonline.org/
