--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   #email: your-email@email.com # email adress
 
 # URL settings
-url: "http://127.0.0.1:4000" # Domain Name of host. [username].github.io for github pages
+url: "http://www.ebenimeli.org" # Domain Name of host. [username].github.io for github pages
 #url: "http://www.ebenimeli.org/beta" # Domain Name of host. [username].github.io for github pages
 
 permalink: pretty
@@ -92,4 +92,3 @@ collections:
   pages:
     output: true
     permalink: /pages/:title
-    
