--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ google_analytics:   UA-XXXXXXXX-00 # Put your Google Analytics code
 # Author settings
 author:
   name: Enrique Benimeli
-  bio: Ingeniero en Informática · Profesor<br>Informática · Educación<br/>Productividad · Lenguas
+  bio: Informática · Educación<br/>Productividad · Lenguas
   picture: assets/images/profile.jpg
   github: ebenimeli # github username
   twitter: enriquebenimeli # twitter username
