Books, log section, now

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,6 +1,6 @@
 - title: La piel del tambor
   author: Arturo Pérez-Reverte
-  link: books/la-piel-del-tambor/
+  link: https://amzn.to/3rIRfhc
   image:
   description:
   genre: [novela]
@@ -8,7 +8,7 @@
 
 - title: El cerebro bilingüe. La neurociencia del lenguaje
   author: Albert Costa
-  link:
+  link: https://amzn.to/3SSKWnf
   image:
   description:
   genre: [ciencia]
