--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,9 +1,9 @@
+- timestamp: 10/11/2022, 3:14:34 PM
+  text: Leyendo «Línea de fuego» de Arturo Pérez-Reverte
+  link: https://amzn.to/3fT67a1
+  cat: reading
+
 - timestamp: 10/10/2022, 10:02:35 PM
   text: "¡Bienvenidos!"
-  link: http://www.ebenimeli.org
-  cat: resources
-
-- timestamp: 08/10/2022, 10:02:35 PM
-  text: "¡Bienvenidos! (2)"
   link: http://www.ebenimeli.org
   cat: resources
