--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/20/2022, 11:37:05 AM
+  text: "El «gen» de la productividad: 40 cosas que hacen (y no hacen) las personas superefectivas"
+  link: https://www.ochoenpunto.com/gen-productividad-40-cosas-personas-superefectivas/
+  cat: blogging
+
 - timestamp: 10/11/2022, 9:34:24 PM
   text: NASA confirma el éxito de la misión DART
   link: https://www.abc.es/ciencia/nasa-confirma-exito-mision-dart-dimorphos-desviado-20221011201851-nt.html
