--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,6 +1,11 @@
-- timestamp: 10/20/2022, 11:37:05 AM
+- timestamp: 10/18/2022, 11:37:05 AM
   text: "El «gen» de la productividad: 40 cosas que hacen (y no hacen) las personas superefectivas"
   link: https://www.ochoenpunto.com/gen-productividad-40-cosas-personas-superefectivas/
+  cat: blogging
+
+- timestamp: 10/17/2022, 9:37:05 AM
+  text: "25 cosas que matan la productividad"
+  link: https://www.ochoenpunto.com/25-cosas-que-matan-la-productividad/
   cat: blogging
 
 - timestamp: 10/11/2022, 9:34:24 PM
