--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/20/2022, 12:30:45 PM
+  text: "Ocho en punto en Telegram"
+  link: https://t.me/ochoenpunto
+  cat: blogging
+
 - timestamp: 10/18/2022, 11:37:05 AM
   text: "El «gen» de la productividad: 40 cosas que hacen (y no hacen) las personas superefectivas"
   link: https://www.ochoenpunto.com/gen-productividad-40-cosas-personas-superefectivas/
