--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/20/2022, 3:20:25 PM
+  text: "10 ideas visuales inspiradas en el libro «Hábitos Atómicos»"
+  link: https://twitter.com/AlexMaeseJ/status/1582403053046575104
+  cat: blogging
+
 - timestamp: 10/18/2022, 11:37:05 AM
   text: "El «gen» de la productividad: 40 cosas que hacen (y no hacen) las personas superefectivas"
   link: https://www.ochoenpunto.com/gen-productividad-40-cosas-personas-superefectivas/
