--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/20/2022, 3:51:29 PM
+  text: "«Estos son mis principios y, si no le gustan, tengo otros». Esta frase atribuida a Groucho Marx (leyenda urbana, al parecer) tiene mucho jugo."
+  link: https://www.ochoenpunto.com/cuestion-de-principios-14-ideas-trabajo-diario/
+  cat: blogging
+
 - timestamp: 10/20/2022, 3:20:25 PM
   text: "10 ideas visuales inspiradas en el libro «Hábitos Atómicos»"
   link: https://twitter.com/AlexMaeseJ/status/1582403053046575104
