El Imperio Romano (Netflix(
El Imperio Romano (Netflix(

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/20/2022, 3:57:32 PM
+  text: "El Imperio Romano. Una impactante mezcla de documental y espectacular epopeya histórica que narra los tumultuosos y violentos reinados de Cómodo, Julio César y Calígula."
+  link: https://www.netflix.com/es/title/80096545
+  cat: blogging
+
 - timestamp: 10/20/2022, 3:51:29 PM
   text: "«Estos son mis principios y, si no le gustan, tengo otros». Esta frase atribuida a Groucho Marx (leyenda urbana, al parecer) tiene mucho jugo."
   link: https://www.ochoenpunto.com/cuestion-de-principios-14-ideas-trabajo-diario/
