--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,7 +1,17 @@
+- timestamp: 10/21/2022, 2:00:00 PM
+  text: "Nuevo artículo en Ocho en punto: «22 microhábitos de 2 minutos»"
+  link: https://www.ochoenpunto.com/22-microhabitos-de-2-minutos
+  cat: blogging
+
+- timestamp: 10/21/2022, 9:17:32 PM
+  text: "Atom se retira. Lo anunciaron en junio, pero hoy he leído el recordatorio. El próximo 15 de diciembre decimos adiós a este fantástico editor de código."
+  link: https://github.blog/2022-06-08-sunsetting-atom/
+  cat: tech
+
 - timestamp: 10/20/2022, 3:57:32 PM
   text: "El Imperio Romano. Una impactante mezcla de documental y espectacular epopeya histórica que narra los tumultuosos y violentos reinados de Cómodo, Julio César y Calígula."
   link: https://www.netflix.com/es/title/80096545
-  cat: blogging
+  cat: learning
 
 - timestamp: 10/20/2022, 3:51:29 PM
   text: "«Estos son mis principios y, si no le gustan, tengo otros». Esta frase atribuida a Groucho Marx (leyenda urbana, al parecer) tiene mucho jugo."
@@ -23,6 +33,11 @@
   link: https://www.ochoenpunto.com/25-cosas-que-matan-la-productividad/
   cat: blogging
 
+- timestamp: 10/15/2022, 9:00:00 AM
+  text: "Ranking OPTIMA LAB de blogs de efectividad (tercer semestre 2022)"
+  link: https://optimainfinito.com/ranking-optima-lab-de-blogs-de-efectividad
+  cat: blogging
+
 - timestamp: 10/11/2022, 9:34:24 PM
   text: NASA confirma el éxito de la misión DART
   link: https://www.abc.es/ciencia/nasa-confirma-exito-mision-dart-dimorphos-desviado-20221011201851-nt.html
@@ -34,6 +49,6 @@
   cat: reading
 
 - timestamp: 10/10/2022, 10:02:35 PM
-  text: "¡Bienvenidos!"
+  text: "¡Hola, mundo!"
   link: http://www.ebenimeli.org
-  cat: resources
+  cat: general
