Log update: reading

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/21/2022, 17:10:00 PM
+  text: "«Los códigos de prioridad «ABC» no funcionan». David Allen comparte en este artículo una opinión radicalmente distinta respecto a la gestión de prioridades, si es que algo así existe. Lo comparte Formación GTD de OPTIMA Lab."
+  link: https://formaciongtd.com/blog/hablemos-de-como-establecer-prioridades/
+  cat: reading
+
 - timestamp: 10/21/2022, 2:00:00 PM
   text: "Nuevo artículo en Ocho en punto: «22 microhábitos de 2 minutos»"
   link: https://www.ochoenpunto.com/22-microhabitos-de-2-minutos
