--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/22/2022, 21:00:00 PM
+  text: "Acabo de publicar en Instagram algunas fotografías de Zaragoza"
+  link: https://www.instagram.com/p/CkB0dFfD7H2/?igshid=MDJmNzVkMjY%3D
+  cat: photos
+
+- timestamp: 10/22/2022, 20:16:00 PM
+  text: "900 años de cambios en las fronteras"
+  link: https://twitter.com/enriquebenimeli/status/1583884983277850624
+  cat: history
+
 - timestamp: 10/21/2022, 17:10:00 PM
   text: "«Los códigos de prioridad «ABC» no funcionan». David Allen comparte en este artículo una opinión radicalmente distinta respecto a la gestión de prioridades, si es que algo así existe. Lo comparte Formación GTD de OPTIMA Lab."
   link: https://formaciongtd.com/blog/hablemos-de-como-establecer-prioridades/
