--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,9 @@
+
+- timestamp: 10/23/2022, 14:05:00 PM
+  text: "Recomendación de domingo: «Vivir sin permiso», una serie creada por Aitor Gabilondo protagonizada por José Coronado,Álex González y Claudia Traisac. Sinopsis: Cuando un empresario y capo de la droga gallego que oculta su alzhéimer decide retirarse, su segundo al mando confabula para arrebatarle el imperio al heredero."
+  link: https://www.netflix.com/es/title/80241001
+  cat: watch
+
 - timestamp: 10/22/2022, 21:00:00 PM
   text: "Acabo de publicar en Instagram algunas fotografías de Zaragoza"
   link: https://www.instagram.com/p/CkB0dFfD7H2/?igshid=MDJmNzVkMjY%3D
