Log update, pictures and other drafts

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,12 @@
+- timestamp: 10/24/2022, 19:54:00 PM
+  text: "Interesante infografía de EOM con la cronología del poder en China"
+  link: https://twitter.com/elOrdenMundial/status/1584138200775528448
+  cat: politics
+
+- timestamp: 10/24/2022, 07:45:00 AM
+  text: "Hoy, vuelta al trabajo."
+  link:
+  cat: personal
 
 - timestamp: 10/23/2022, 14:05:00 PM
   text: "Recomendación de domingo: «Vivir sin permiso», una serie creada por Aitor Gabilondo protagonizada por José Coronado,Álex González y Claudia Traisac. Sinopsis: Cuando un empresario y capo de la droga gallego que oculta su alzhéimer decide retirarse, su segundo al mando confabula para arrebatarle el imperio al heredero."
