--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/24/2022, 20:13:00 PM
+  text: "iPadOS 16.1, iOS 16.1 y macOS Ventura ya están disponibles"
+  link: https://hipertextual.com/2022/10/ipados-16-1-ios-16-1-y-macos-ventura-ya-estan-disponibles-para-todos
+  cat: tech
+
 - timestamp: 10/24/2022, 19:54:00 PM
   text: "Interesante infografía de EOM con la cronología del poder en China"
   link: https://twitter.com/elOrdenMundial/status/1584138200775528448
