--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,18 @@
+- timestamp: 10/24/2022, 20:28:00 PM
+  text: "«El ajedrez es el único deporte en el que puedes tener gente de diferentes orígenes y edades, y cuando están hablando sobre el juego, están en el mismo nivel. Para mí esa es la cosa más hermosa del ajedrez.» (Hikaru Nakamura)"
+  link: https://twitter.com/chesscom_es/status/1583840633521065985
+  cat: chess
+
+- timestamp: 10/24/2022, 20:24:00 PM
+  text: "Profesor, ¿para qué sirve la geometría?"
+  link: https://twitter.com/enriquebenimeli/status/1584611575230795776
+  cat: maths
+
+- timestamp: 10/24/2022, 20:20:00 PM
+  text: "Things ya está preparado para iPadOS 16 y macOS 13. Lo nuevo: Stage Manager"
+  link: https://culturedcode.com/things/blog/2022/10/things-for-ipados-16-and-macos-13/
+  cat: tech
+
 - timestamp: 10/24/2022, 20:13:00 PM
   text: "iPadOS 16.1, iOS 16.1 y macOS Ventura ya están disponibles"
   link: https://hipertextual.com/2022/10/ipados-16-1-ios-16-1-y-macos-ventura-ya-estan-disponibles-para-todos
