Log data and style update

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,23 @@
+- timestamp: 10/25/2022, 16:42:00 PM
+  text: "¡Hola, terraplanistas! Carl Sagan os saluda."
+  link: https://twitter.com/EnsedeCiencia/status/1584897042647613440
+  cat: science
+
+- timestamp: 10/25/2022, 16:35:00 PM
+  text: "Me gusta el término «trasmañanar», no tanto la acción y menos sus consecuencias."
+  link: https://twitter.com/AlejandroMBravo/status/1584458421641695232
+  cat: languages
+
+- timestamp: 10/25/2022, 16:32:00 PM
+  text: "Sobre Inteligencia Artificial y salmones"
+  link: https://twitter.com/enriquebenimeli/status/1584633193969295360
+  cat: tech
+
+- timestamp: 10/25/2022, 16:28:00 PM
+  text: "Hoy, recomiendación de un artículo de la casa: «Lo que es y lo que no es ser productivo: 13 mitos y 13 verdades»"
+  link: https://www.ochoenpunto.com/ser-productivo-13-mitos-y-13-verdades/
+  cat: blogging
+
 - timestamp: 10/24/2022, 20:28:00 PM
   text: "«El ajedrez es el único deporte en el que puedes tener gente de diferentes orígenes y edades, y cuando están hablando sobre el juego, están en el mismo nivel. Para mí esa es la cosa más hermosa del ajedrez.» (Hikaru Nakamura)"
   link: https://twitter.com/chesscom_es/status/1583840633521065985
