--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/25/2022, 16:53:00 PM
+  text: "Actualizando macOS: Ventura 13.0 y unos 4 GB por delante... Crucemos los dedos."
+  link: https://www.apple.com/es/macos/ventura/
+  cat: tech
+
+- timestamp: 10/25/2022, 16:52:00 PM
+  text: "A veces hay que jubilar algunos libros. Unos duelen más que otros."
+  link: https://twitter.com/enriquebenimeli/status/1584623136510967808
+  cat: tech
+
 - timestamp: 10/25/2022, 16:42:00 PM
   text: "¡Hola, terraplanistas! Carl Sagan os saluda."
   link: https://twitter.com/EnsedeCiencia/status/1584897042647613440
