--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/26/2022, 19:55:00 PM
+  text: "Stephen Wolfram y James Douglas Boyd lanzan el Wolfram Institute"
+  link: https://www.wolframinstitute.org/
+  cat: tech
+
+- timestamp: 10/26/2022, 19:49:00 PM
+  text: "Joe es uno de los primeros editores de código que utilicé. Programé mucho con él, sobre todo en los primeros años de ingeniería Informática."
+  link: https://twitter.com/enriquebenimeli/status/1585327499520532481
+  cat: tech
+
 - timestamp: 10/25/2022, 16:42:00 PM
   text: "¡Hola, terraplanistas! Carl Sagan os saluda."
   link: https://twitter.com/EnsedeCiencia/status/1584897042647613440
