--- a/_data/log.yml
+++ b/_data/log.yml
@@ -4,7 +4,7 @@
   cat: tech
 
 - timestamp: 10/26/2022, 19:49:00 PM
-  text: "Joe es uno de los primeros editores de código que utilicé. Programé mucho con él, sobre todo en los primeros años de ingeniería Informática."
+  text: "Joe es uno de los primeros editores de código que utilicé. Programé mucho con él, sobre todo en los primeros años de ingeniería Informática. Sigo utilizándolo para determinadas tareas."
   link: https://twitter.com/enriquebenimeli/status/1585327499520532481
   cat: tech
 
