--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/27/2022, 20:18:00 PM
+  text: "Walter Isaacson ha coincidido hoy con Elon Musk en la cafetería de las oficinas centrales de Twitter. Isaacson está preparando una biografía sobre el empresario, por cierto."
+  link: https://twitter.com/WalterIsaacson/status/1585666128713371649
+  cat: news
+
 - timestamp: 10/26/2022, 19:55:00 PM
   text: "Stephen Wolfram y James Douglas Boyd lanzan el Wolfram Institute"
   link: https://www.wolframinstitute.org/
