--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,18 @@
+- timestamp: 10/28/2022, 20:32:00 PM
+  text: "¡Buen fin de semana! (o feliz puente, si es el caso). Recordad que el sábado cambia la hora."
+  link: https://www.elmundo.es/como/2022/10/28/635b783bfc6c83e93a8b45bb.html
+  cat: personal
+
+- timestamp: 10/28/2022, 20:31:00 PM
+  text: "Sí, así es: hay cables submarinos que conectan los continentes."
+  link: https://twitter.com/EnsedeCiencia/status/1585709000519483392
+  cat: tech
+
+- timestamp: 10/28/2022, 20:29:00 PM
+  text: "Tiramisaurus Rex"
+  link: https://twitter.com/weirddalle/status/1585710382001315840
+  cat: humor
+
 - timestamp: 10/27/2022, 20:18:00 PM
   text: "Walter Isaacson ha coincidido hoy con Elon Musk en la cafetería de las oficinas centrales de Twitter. Isaacson está preparando una biografía sobre el empresario, por cierto."
   link: https://twitter.com/WalterIsaacson/status/1585666128713371649
