--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/29/2022, 09:26:00 AM
+  text: "Hay una aplicación que permite resolver el cubo de Rubik, pero claro, no es lo mismo..."
+  link: https://twitter.com/TechAmazing/status/1585787542636728320
+  cat: tech
+
 - timestamp: 10/28/2022, 20:32:00 PM
   text: "¡Buen fin de semana! (o feliz puente, si es el caso). Recordad que el sábado cambia la hora."
   link: https://www.elmundo.es/como/2022/10/28/635b783bfc6c83e93a8b45bb.html
