--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,9 @@
+- timestamp: 10/29/2022, 10:13:00 AM
+  text: "Imaginando un GTD remasterizado y sin ruido. Lo que llega de la mano de OPTIMA GTD tiene muy buena pinta."
+  link: https://optimainfinito.com/2022/10/imagina-un-gtd-remasterizado-y-sin-ruido.html
+  cat: productivity
+
+
 - timestamp: 10/29/2022, 09:26:00 AM
   text: "Hay una aplicación que permite resolver el cubo de Rubik, pero claro, no es lo mismo..."
   link: https://twitter.com/TechAmazing/status/1585787542636728320
