--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/29/2022, 20:27:00 AM
+  text: "¡Mucho cuidado con algunos anuncios que se hacen pasar por GIMP! Peligro de malware."
+  link: https://www.reddit.com/r/GIMP/comments/ygbr4o/dangerous_google_ad_disguising_itself_as/
+  cat: tech
+
+- timestamp: 10/29/2022, 16:24:00 AM
+  text: "Viendo en Netflix el episodio 3 de «El gran Imperio otomano»."
+  link: https://www.netflix.com/es/title/80990771
+  cat: tv
+
 - timestamp: 10/29/2022, 10:13:00 AM
   text: "Imaginando un GTD remasterizado y sin ruido. Lo que llega de la mano de OPTIMA GTD tiene muy buena pinta."
   link: https://optimainfinito.com/2022/10/imagina-un-gtd-remasterizado-y-sin-ruido.html
