--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/30/2022, 11:29:00 AM
+  text: "Aplicando algunos cambios en la sección de libros: progreso de lecturas y otros."
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: blogging
+
+- timestamp: 10/30/2022, 11:29:00 AM
+  text: "La fuerza de la naturaleza: una erupción volcánica a vista de dron."
+  link: https://twitter.com/gorka_orive/status/1586380098915258368
+  cat: science
+
 - timestamp: 10/29/2022, 20:27:00 AM
   text: "¡Mucho cuidado con algunos anuncios que se hacen pasar por GIMP! Peligro de malware."
   link: https://www.reddit.com/r/GIMP/comments/ygbr4o/dangerous_google_ad_disguising_itself_as/
