Bookshelf style updated

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,5 @@
 - timestamp: 10/30/2022, 11:29:00 AM
-  text: "Aplicando algunos cambios en la sección de libros: progreso de lecturas y otros."
+  text: "Aplicando algunos cambios en la sección de libros: progreso de lectura y otros."
   link: https://www.ebenimeli.org/pages/bookshelf.html
   cat: blogging
 
