--- a/_data/books.yml
+++ b/_data/books.yml
@@ -25,7 +25,7 @@
 
 - title: En busca del origen del lenguaje
   author: Sverker Johansson
-  link: books/en-busca-origen-lenguaje
+  link: https://amzn.to/3fhFRGt
   image:
   description:
   genre: [ciencia]
