--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 10/30/2022, 13:45:00 AM
+  text: "Parallel lives: matching portraits from South and North Korea – in pictures"
+  link: https://www.theguardian.com/world/2018/sep/19/parallel-lives-matching-portraits-from-south-and-north-korea-in-pictures
+  cat: culture
+
 - timestamp: 10/30/2022, 11:29:00 AM
   text: "Aplicando algunos cambios en la sección de libros: progreso de lectura y otros."
   link: https://www.ebenimeli.org/pages/bookshelf.html
