--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,11 +1,72 @@
-- timestamp: 10/25/2022, 16:53:00 PM
-  text: "Actualizando macOS: Ventura 13.0 y unos 4 GB por delante... Crucemos los dedos."
-  link: https://www.apple.com/es/macos/ventura/
+- timestamp: 10/30/2022, 18:32:00 AM
+  text: "Leyendo «Línea de fuego» de Arturo Pérez-Reverte"
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: reading
+
+- timestamp: 10/30/2022, 13:45:00 AM
+  text: "Parallel lives: matching portraits from South and North Korea – in pictures"
+  link: https://www.theguardian.com/world/2018/sep/19/parallel-lives-matching-portraits-from-south-and-north-korea-in-pictures
+  cat: culture
+
+- timestamp: 10/30/2022, 11:29:00 AM
+  text: "Aplicando algunos cambios en la sección de libros: progreso de lectura y otros."
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: blogging
+
+- timestamp: 10/30/2022, 11:29:00 AM
+  text: "La fuerza de la naturaleza: una erupción volcánica a vista de dron."
+  link: https://twitter.com/gorka_orive/status/1586380098915258368
+  cat: science
+
+- timestamp: 10/29/2022, 20:27:00 AM
+  text: "¡Mucho cuidado con algunos anuncios que se hacen pasar por GIMP! Peligro de malware."
+  link: https://www.reddit.com/r/GIMP/comments/ygbr4o/dangerous_google_ad_disguising_itself_as/
   cat: tech
 
-- timestamp: 10/25/2022, 16:52:00 PM
-  text: "A veces hay que jubilar algunos libros. Unos duelen más que otros."
-  link: https://twitter.com/enriquebenimeli/status/1584623136510967808
+- timestamp: 10/29/2022, 16:24:00 AM
+  text: "Viendo en Netflix el episodio 3 de «El gran Imperio otomano»."
+  link: https://www.netflix.com/es/title/80990771
+  cat: tv
+
+- timestamp: 10/29/2022, 10:13:00 AM
+  text: "Imaginando un GTD remasterizado y sin ruido. Lo que llega de la mano de OPTIMA GTD tiene muy buena pinta."
+  link: https://optimainfinito.com/2022/10/imagina-un-gtd-remasterizado-y-sin-ruido.html
+  cat: productivity
+
+
+- timestamp: 10/29/2022, 09:26:00 AM
+  text: "Hay una aplicación que permite resolver el cubo de Rubik, pero claro, no es lo mismo..."
+  link: https://twitter.com/TechAmazing/status/1585787542636728320
+  cat: tech
+
+- timestamp: 10/28/2022, 20:32:00 PM
+  text: "¡Buen fin de semana! (o feliz puente, si es el caso). Recordad que el sábado cambia la hora."
+  link: https://www.elmundo.es/como/2022/10/28/635b783bfc6c83e93a8b45bb.html
+  cat: personal
+
+- timestamp: 10/28/2022, 20:31:00 PM
+  text: "Sí, así es: hay cables submarinos que conectan los continentes."
+  link: https://twitter.com/EnsedeCiencia/status/1585709000519483392
+  cat: tech
+
+- timestamp: 10/28/2022, 20:29:00 PM
+  text: "Tiramisaurus Rex"
+  link: https://twitter.com/weirddalle/status/1585710382001315840
+  cat: humor
+
+- timestamp: 10/27/2022, 20:18:00 PM
+  text: "Walter Isaacson ha coincidido hoy con Elon Musk en la cafetería de las oficinas centrales de Twitter. Isaacson está preparando una biografía sobre el empresario, por cierto."
+  link: https://twitter.com/WalterIsaacson/status/1585666128713371649
+  cat: news
+
+- timestamp: 10/26/2022, 19:55:00 PM
+  text: "Stephen Wolfram y James Douglas Boyd lanzan el Wolfram Institute"
+  link: https://www.wolframinstitute.org/
+  cat: tech
+
+- timestamp: 10/26/2022, 19:49:00 PM
+  text: "Joe es uno de los primeros editores de código que utilicé. Programé mucho con él, sobre todo en los primeros años de ingeniería Informática. Sigo utilizándolo para determinadas tareas."
+  link: https://twitter.com/enriquebenimeli/status/1585327499520532481
   cat: tech
 
 - timestamp: 10/25/2022, 16:42:00 PM
