--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/31/2022, 20:53:00 AM
+  text: "Nuevo post: Hola, mundo"
+  link: hola-mundo
+  cat: news
+
+- timestamp: 10/31/2022, 11:19:00 AM
+  text: "Mañana empieza el NaNoWriMo."
+  link: https://nanowrimo.org/
+  cat: news
+
 - timestamp: 10/30/2022, 18:32:00 AM
   text: "Leyendo «Línea de fuego» de Arturo Pérez-Reverte"
   link: https://www.ebenimeli.org/pages/bookshelf.html
