--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/01/2022, 16:56:00 AM
+  text: "Twitter: 'town square' or 'gladiator arena'? Thoughts on this?"
+  link: https://twitter.com/enriquebenimeli/status/1587476236204400640
+  cat: tech
+
 - timestamp: 11/01/2022, 08:00:00 AM
   text: "NaNoWriMo 2022"
   link: nanowrimo2022
