--- a/_data/log.yml
+++ b/_data/log.yml
@@ -8,6 +8,11 @@
   link: nanowrimo2022
   cat: blogging
 
+- timestamp: 11/01/2022, 07:00:00 AM
+  text: "Noviembre."
+  link: https://twitter.com/enriquebenimeli/status/1587478538306916357
+  cat: personal
+
 - timestamp: 10/31/2022, 20:53:00 AM
   text: "Hola, mundo"
   link: hola-mundo
