--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,18 @@
+- timestamp: 11/02/2022, 19:52:00 PM
+  text: "No hay dos personas que lean el mismo libro (Edmund Wilson)"
+  link: https://twitter.com/profedonPardino/status/1587508989960617984
+  cat: literature
+
+- timestamp: 11/02/2022, 19:51:00 PM
+  text: "Para los nostálgicos: los sonidos que escuchábamos hace 40 años"
+  link: https://twitter.com/ValaAfshar/status/1587439561336135682
+  cat: history
+
+- timestamp: 11/02/2022, 19:49:00 PM
+  text: "18 formas de reutilizar tu LEGO"
+  link: https://www.osagaz.com.br/18-ideias-com-lego/
+  cat: creativity
+
 - timestamp: 11/01/2022, 16:56:00 AM
   text: "Twitter: 'town square' or 'gladiator arena'? Thoughts on this?"
   link: https://twitter.com/enriquebenimeli/status/1587476236204400640
