--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/02/2022, 20:12:00 PM
+  text: "En una entrevista, Arturo Pérez-Reverte dijo: «Si yo ahora fuese un joven escritor no haría novelas, haría videojuegos y series de televisión. El futuro es eso». Y la gente de «Más de uno» ha hecho esto..."
+  link: https://twitter.com/enriquebenimeli/status/1587885276646363136
+  cat: literature
+
 - timestamp: 11/02/2022, 19:52:00 PM
   text: "No hay dos personas que lean el mismo libro (Edmund Wilson)"
   link: https://twitter.com/profedonPardino/status/1587508989960617984
