--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/03/2022, 06:17:00 PM
+  text: "Nueva nota: «Canales compartidos en Teams»"
+  link: teams-canales
+  cat: blogging
+
 - timestamp: 11/02/2022, 20:12:00 PM
   text: "En una entrevista, Arturo Pérez-Reverte dijo: «Si yo ahora fuese un joven escritor no haría novelas, haría videojuegos y series de televisión. El futuro es eso». Y la gente de «Más de uno» ha hecho esto..."
   link: https://twitter.com/enriquebenimeli/status/1587885276646363136
