--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/03/2022, 19:32:00 PM
+  text: "Lo que ha logrado Boston Dynamics en los últimos 30 años es sencillamente espectacular."
+  link: https://twitter.com/enriquebenimeli/status/1588238348036018177
+  cat: technology
+
 - timestamp: 11/03/2022, 06:17:00 PM
   text: "Nueva nota: «Canales compartidos en Teams»"
   link: teams-canales
