--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,10 @@
+
+
+- timestamp: 11/04/2022, 19:50:00 PM
+  text: "Ayer aprendí el adjetivo «inmarcesible». Ya está la lista de palabras favoritas."
+  link: https://twitter.com/enriquebenimeli/status/1588260869812948992
+  cat: languages
+
 - timestamp: 11/03/2022, 19:32:00 PM
   text: "Lo que ha logrado Boston Dynamics en los últimos 30 años es sencillamente espectacular."
   link: https://twitter.com/enriquebenimeli/status/1588238348036018177
