--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/08/2022, 20:28:00 PM
+  text: "A brief history of punctuation marks"
+  link: https://twitter.com/culturaltutor/status/1589766730599260161
+  cat: history
+
 - timestamp: 11/05/2022, 20:12:00 PM
   text: "Nueva nota: «Otoño, supongo»"
   link: otono-supongo
