Log update, header and post structure

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,9 @@
+
+- timestamp: 11/09/2022, 21:00:00 PM
+  text: "Pues si Elon Musk cierra, este es mi Twitter particular."
+  link: https://twitter.com/elmundoes/status/1590068126204715008
+  cat: news
+
 - timestamp: 11/08/2022, 20:28:00 PM
   text: "A brief history of punctuation marks"
   link: https://twitter.com/culturaltutor/status/1589766730599260161
