--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/10/2022, 18:16:00 PM
+  text: "«Educate yourself about things. Study hard what interests you the most. Don't worry about what others think of you, that's none of your business. Train your mind to think, doubt, and question. That's how you grow.» (Richard Feynman)"
+  link: https://twitter.com/ProfFeynman/status/1590403702346887169
+  cat: quote
+
 
 - timestamp: 11/09/2022, 21:00:00 PM
   text: "Pues si Elon Musk cierra, este es mi Twitter particular."
