Scripts (minor) updates and new log

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/12/2022, 19:57:00 PM
+  text: "En 1930, giraron 90 grados la sede de Bell en Indianapolis, un edificio de ocho plantas. Lo cuenta Pedro Torrijos en un hilo de Twitter."
+  link: https://twitter.com/enriquebenimeli/status/1591505270991384577
+  cat: history
+
 - timestamp: 11/12/2022, 09:48:00 AM
   text: "¿El final de una era? - Vlog de Marc Vidal"
   link: https://www.youtube.com/watch?v=Cucprl_FoGE&t=323s
