--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,15 @@
+
+- timestamp: 11/15/2022, 18:54:00 PM
+  text: "Ya somos 8000 millones de habitantes en la Tierra. ¿Y ahora qué?"
+  link: https://www.instagram.com/p/Ck9e_DfA7mZ/?igshid=MDJmNzVkMjY%3D
+  cat: news
+
+
+- timestamp: 11/15/2022, 18:51:00 PM
+  text: "Pangeos, la ciudad flotante itinerante en forma de tortuga."
+  link: https://twitter.com/enriquebenimeli/status/1592260888249397248
+  cat: news
+
 - timestamp: 11/12/2022, 19:54:00 PM
   text: "En 1930, giraron 90 grados la sede de Bell en Indianapolis, un edificio de ocho plantas. Lo cuenta Pedro Torrijos en un hilo de Twitter."
   link: https://twitter.com/enriquebenimeli/status/1591505270991384577
