Log update, post layout and header fixed

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,9 +1,17 @@
+- timestamp: 11/18/2022, 21:37:00 PM
+  text: "Así puedes hacer una copia de seguridad de tus tuits."
+  link: https://www.microsiervos.com/archivo/seguridad/twitter-peligro-derrumbarse-copia-de-seguridad-borrar-dms.html
+  cat: howto
+
+- timestamp: 11/18/2022, 21:35:00 PM
+  text: "Nuevo artículo en Esfera TIC: «SuperBOE, el BOE enriquecido»"
+  link: https://www.esferatic.com/2022/11/superboe-el-boe-enriquecido/
+  cat: blogging
 
 - timestamp: 11/15/2022, 18:54:00 PM
   text: "Ya somos 8000 millones de habitantes en la Tierra. ¿Y ahora qué?"
   link: https://www.instagram.com/p/Ck9e_DfA7mZ/?igshid=MDJmNzVkMjY%3D
   cat: news
-
 
 - timestamp: 11/15/2022, 18:51:00 PM
   text: "Pangeos, la ciudad flotante itinerante en forma de tortuga."
