--- a/_data/books.yml
+++ b/_data/books.yml
@@ -60,22 +60,27 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 
 - title: "Céntrate (Deep Work)"
   author: Cal Newport
+  link: https://amzn.to/3Xeb1iW
   completed: '2022'
 
 - title: "La Edad Media. Una historia gráfica"
   author: Eleanor Janega y Neil Max Emmanuel
+  link: https://amzn.to/3hU1hKP
   completed: '2022'
 
 - title: "Ajedrez y ciencia, pasiones mezcladas"
   author: Leontxo García
+  link: https://amzn.to/3EHrsgu
   completed: '2022'
 
 - title: "Nikola Tesla. El hombre que inventó el siglo XX"
   author: Charo González Casas
+  link: https://amzn.to/3UT5ahI
   completed: '2022'
 
 - title: "La fábrica de cretinos digitales"
   author: Michel Desmurget
+  link: https://amzn.to/3XddMkK
   completed: '2022'
 
 #2021
@@ -90,107 +95,133 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 
 - title: El mensaje de Pandora
   author: Javier Sierra (5)
+  link: https://amzn.to/3Xe4xRh
   completed: '2021'
 
 - title: La España vacía
   author: Sergio del Molino (8)
+  link: https://amzn.to/3EiwKOd
   completed: '2021'
 
 - title: La ciudad del vapor
   author: Carlos Ruiz Zafón (9)
+  link: https://amzn.to/3tE12WR
   completed: '2021'
 
 - title: Loba negra
   author: Juan Gómez-Jurado (7)
+  link: https://amzn.to/3GqCGHt
   completed: '2021'
 
 - title: Ikigai. Los secretos de Japón para una vida larga y feliz
   author: H. García y F. Miralles (8)
+  link: https://amzn.to/3EHvR3a
   completed: '2021'
 
 - title: ¿Cuánta tierra necesita un hombre?
   author: León Tolstói (7)
+  link: https://amzn.to/3giJv3j
   completed: '2021'
 
 - title: Aprendiendo de los mejores 2
   author: Francisco Alcaide (8)
+  link: https://amzn.to/3ggkgPd
   completed: '2021'
 
 - title: Mentes maravillosas
   author: Ian Stewart (8)
+  link: https://amzn.to/3UNgdJ2
   completed: '2021'
 
 - title: En busca del fuego
   author: José Antonio Cabezas (8)
+  link: https://amzn.to/3tMVOry
   completed: '2021'
 
 - title: El empleo del futuro
   author: Manuel Hidalgo (7)
+  link: https://amzn.to/3hZb56k
   completed: '2021'
 
 - title: Rey blanco
   author: Juan Gómez-Jurado (7)
+  link: https://amzn.to/3ggpPNs
   completed: '2021'
 
 - title: La librera y el ladrón
   author: Oliver Espinosa (6)
+  link: https://amzn.to/3EJjXFS
   completed: '2021'
 
 - title: La traductora de Toledo
   author: Pilar Cabrera Laguna (7)
+  link: https://amzn.to/3tEK62q
   completed: '2021'
 
 - title: Eso no estaba en mi libro de la Guerra Fría
   author: Juan José Primo Jurado (8)
+  link: https://amzn.to/3GqDAnl
   completed: '2021'
 
 - title: La ruta prohibida y otros enigmas de la historia
   author: Javier Sierra (7)
+  link: https://amzn.to/3EkT4qu
   completed: '2021'
 
 - title: Aprendiendo de los mejores 3
   author: Francisco Alcaide (7)
+  link: https://amzn.to/3OlP25H
   completed: '2021'
 
 - title: El enigma de la habitación 622
   author: Joël Dicker (8)
+  link: https://amzn.to/3GolRNw
   completed: '2021'
 
 - title: Una pequeña historia de la filosofía
   author: Nigel Warburton (8)
+  link: https://amzn.to/3UZV7qG
   completed: '2021'
 
 - title: La familia del Prado
   author: Juan Eslava Galán (9)
+  link: https://amzn.to/3EiuhmN
   completed: '2021'
 
 - title: Alan Turing. El pionero de la era de la información
   author: Brian Jack Copeland (10)
+  link: https://amzn.to/3ArRuCa
   completed: '2021'
 
 - title: Manipulando la historia. Operaciones de falsa bandera. Del Maine al golpe de Estado en Turquía
   author: Eric Frattini (7)
+  link: https://amzn.to/3tGclgX
   completed: '2021'
 
 - title: Eso no estaba en mi libro de Japón
   author: Beatriz Lizana (7)
+  link: https://amzn.to/3Xcry78
   completed: '2021'
 
 - title: Novela de ajedrez
   author: Stefan Zweig (9)
+  link: https://amzn.to/3Gom2IG
   completed: '2021'
 
 - title: Autorretrato sin mí
   author: Fernando Aramburu (8)
+  link: https://amzn.to/3hZqt2c
   completed: '2021'
 
 
 #2020
 - title: Una lengua muy muy larga
   author: Lola Pons Rodríguez
+  link:
   completed: '2020'
 - title: Claves del lenguaje humano
   author: María Victoria Escandell Vidal y otros
+  link:
   completed: '2020'
 - title: Somos lo que hablamos
   author: Luis Rojas Marcos
