Books rating and log update

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/18/2022, 22:41:00 PM
+  text: "He actualizado el rincón de lectura con mi valoración personal de cada obra y una selección de libros favoritos."
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: blogging
+
 - timestamp: 11/18/2022, 21:37:00 PM
   text: "Así puedes hacer una copia de seguridad de tus tuits."
   link: https://www.microsiervos.com/archivo/seguridad/twitter-peligro-derrumbarse-copia-de-seguridad-borrar-dms.html
