--- a/_data/books.yml
+++ b/_data/books.yml
@@ -16,6 +16,7 @@
   description:
   genre: [novela]
   completed: '2022'
+  rating: 
 
 - title: El cerebro bilingüe. La neurociencia del lenguaje
   author: Albert Costa
@@ -92,403 +93,692 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   description:
   genre: [historia]
   completed: '2021'
+  rating: 4
 
 - title: El mensaje de Pandora
-  author: Javier Sierra (5)
+  author: Javier Sierra
   link: https://amzn.to/3Xe4xRh
   completed: '2021'
+  rating: 2
 
 - title: La España vacía
-  author: Sergio del Molino (8)
+  author: Sergio del Molino
   link: https://amzn.to/3EiwKOd
   completed: '2021'
+  rating: 4
 
 - title: La ciudad del vapor
-  author: Carlos Ruiz Zafón (9)
+  author: Carlos Ruiz Zafón
   link: https://amzn.to/3tE12WR
   completed: '2021'
+  rating: 5
 
 - title: Loba negra
-  author: Juan Gómez-Jurado (7)
+  author: Juan Gómez-Jurado
   link: https://amzn.to/3GqCGHt
   completed: '2021'
+  rating: 4
 
 - title: Ikigai. Los secretos de Japón para una vida larga y feliz
-  author: H. García y F. Miralles (8)
+  author: H. García y F. Miralles
   link: https://amzn.to/3EHvR3a
   completed: '2021'
+  rating: 4
 
 - title: ¿Cuánta tierra necesita un hombre?
-  author: León Tolstói (7)
+  author: León Tolstói
   link: https://amzn.to/3giJv3j
   completed: '2021'
+  rating: 4
 
 - title: Aprendiendo de los mejores 2
-  author: Francisco Alcaide (8)
+  author: Francisco Alcaide
   link: https://amzn.to/3ggkgPd
   completed: '2021'
+  rating: 4
 
 - title: Mentes maravillosas
-  author: Ian Stewart (8)
+  author: Ian Stewart
   link: https://amzn.to/3UNgdJ2
   completed: '2021'
+  rating: 4
 
 - title: En busca del fuego
-  author: José Antonio Cabezas (8)
+  author: José Antonio Cabezas
   link: https://amzn.to/3tMVOry
   completed: '2021'
+  rating: 4
 
 - title: El empleo del futuro
-  author: Manuel Hidalgo (7)
+  author: Manuel Hidalgo
   link: https://amzn.to/3hZb56k
   completed: '2021'
+  rating: 4
 
 - title: Rey blanco
   author: Juan Gómez-Jurado (7)
   link: https://amzn.to/3ggpPNs
   completed: '2021'
+  rating: 4
 
 - title: La librera y el ladrón
-  author: Oliver Espinosa (6)
+  author: Oliver Espinosa
   link: https://amzn.to/3EJjXFS
   completed: '2021'
+  rating: 3
 
 - title: La traductora de Toledo
-  author: Pilar Cabrera Laguna (7)
+  author: Pilar Cabrera Laguna
   link: https://amzn.to/3tEK62q
   completed: '2021'
+  rating: 4
 
 - title: Eso no estaba en mi libro de la Guerra Fría
-  author: Juan José Primo Jurado (8)
+  author: Juan José Primo Jurado
   link: https://amzn.to/3GqDAnl
   completed: '2021'
+  rating: 4
 
 - title: La ruta prohibida y otros enigmas de la historia
-  author: Javier Sierra (7)
+  author: Javier Sierra
   link: https://amzn.to/3EkT4qu
   completed: '2021'
+  rating: 4
 
 - title: Aprendiendo de los mejores 3
-  author: Francisco Alcaide (7)
+  author: Francisco Alcaide
   link: https://amzn.to/3OlP25H
   completed: '2021'
+  rating: 4
 
 - title: El enigma de la habitación 622
-  author: Joël Dicker (8)
+  author: Joël Dicker
   link: https://amzn.to/3GolRNw
   completed: '2021'
+  rating: 4
 
 - title: Una pequeña historia de la filosofía
-  author: Nigel Warburton (8)
+  author: Nigel Warburton
   link: https://amzn.to/3UZV7qG
   completed: '2021'
+  rating: 4
 
 - title: La familia del Prado
-  author: Juan Eslava Galán (9)
+  author: Juan Eslava Galán
   link: https://amzn.to/3EiuhmN
   completed: '2021'
+  rating: 5
 
 - title: Alan Turing. El pionero de la era de la información
-  author: Brian Jack Copeland (10)
+  author: Brian Jack Copeland
   link: https://amzn.to/3ArRuCa
   completed: '2021'
+  rating: 5
 
 - title: Manipulando la historia. Operaciones de falsa bandera. Del Maine al golpe de Estado en Turquía
-  author: Eric Frattini (7)
+  author: Eric Frattini
   link: https://amzn.to/3tGclgX
   completed: '2021'
+  rating: 4
 
 - title: Eso no estaba en mi libro de Japón
-  author: Beatriz Lizana (7)
+  author: Beatriz Lizana
   link: https://amzn.to/3Xcry78
   completed: '2021'
+  rating: 4
 
 - title: Novela de ajedrez
-  author: Stefan Zweig (9)
+  author: Stefan Zweig
   link: https://amzn.to/3Gom2IG
   completed: '2021'
+  rating: 5
 
 - title: Autorretrato sin mí
-  author: Fernando Aramburu (8)
+  author: Fernando Aramburu
   link: https://amzn.to/3hZqt2c
   completed: '2021'
-
+  rating: 4
 
 #2020
 - title: Una lengua muy muy larga
   author: Lola Pons Rodríguez
   link:
   completed: '2020'
+  rating: 5
+
 - title: Claves del lenguaje humano
   author: María Victoria Escandell Vidal y otros
   link:
   completed: '2020'
+  rating: 3
+
 - title: Somos lo que hablamos
   author: Luis Rojas Marcos
+  link:
   completed: '2020'
+  rating: 3
+
 - title: Viviendo en el futuro
   author: Enrique Dans
+  link:
   completed: '2020'
+  rating: 3
+
 - title: Ada Lovelace. La formación de una científica informática
   author: C. Hollings, U. Martin y A. Rice
+  link:
   completed: '2020'
+  rating: 4
+
 - title: Teorías lingüísticas
   author: Ricardo Mairal
+  link:
   completed: '2020'
+  rating: 4
+
 - title: Patria
   author: Fernando Aramburu
+  link:
   completed: '2020'
+  rating: 5
+
 - title: Saber hablar
   author: Instituto Cervantes
+  link:
   completed: '2020'
+  rating: 4
+
 - title: Lo imprevisible
   author: Marta García Aller
+  link:
   completed: '2020'
+  rating: 3
+
 - title: Goodbye, Things. The New Japanese Minimalism
   author: Fumio Sasaki
+  link:
   completed: '2020'
+  rating: 4
+
 - title: ¡Loca! Juana, reina de Castilla
   author: Neus Arqués
+  link:
   completed: '2020'
+  rating: 3
+
 - title: It Doesn't Have to Be Crazy at Work
   author: J. Fried y D. Heinemeier Hansson
+  link:
   completed: '2020'
+  rating: 3
+
 - title: La revolución de la productividad
   author: Marc Reklau
+  link:
   completed: '2020'
+  rating: 3
+
 - title: El enemigo conoce el sistema
   author: Marta Peirano
+  link:
   completed: '2020'
+  rating: 5
+
 - title: Babel. La vuelta al mundo en 20 idiomas
   author: Gaston Dorren
+  link:
   completed: '2020'
+  rating: 5
+
 - title: Tierra firme
   author: Matilde Asensi
+  link:
   completed: '2020'
+  rating: 4
+
 - title: El árbol de la lengua
   author: Lola Pons Rodríguez
+  link:
   completed: '2020'
+  rating: 5
+
 - title: ¿Qué clase de criaturas somos?
   author: Noam Chomsky
+  link:
   completed: '2020'
+  rating: 4
+
 - title: Hello World. How to be Human in the Age of the Machine
   author: Hannah Fry
+  link:
   completed: '2020'
+  rating: 4
+
 - title: 500 años de frío
   author: Javier Peláez
+  link:
   completed: '2020'
+  rating: 4
+
 - title: Poética de Aristóteles (Ed. trilingüe)
   author: Valentín García Yebra
+  link:
   completed: '2020'
+  rating: 3
+
 - title: Cantar de Mío Cid
   author: Anónimo
+  link:
   completed: '2020'
+  rating: 3
+
 - title: Reina Roja
   author: Juan Gómez-Jurado
+  link:
   completed: '2020'
+  rating: 4
+
 - title: El enigma de Colón y los descubrimientos de América
   author: Juan Eslava Galán
+  link:
   completed: '2020'
+  rating: 3
 
 #2019
 - title: 21 lecciones para el siglo XXI
   author: Yuval Noah Harari
+  link:
   completed: '2019'
+  rating: 5
 
 - title: ¿Cuándo? La ciencia de encontrar el momento preciso
   author: Daniel H. Pink
+  link:
   completed: '2019'
+  rating: 3
 
 - title: Por encima de la lluvia
   author: Víctor del Árbol
+  link:
   completed: '2019'
+  rating: 3
 
 - title: Aprendiendo de los mejores
   author: Francisco Alcaide
+  link:
   completed: '2019'
+  rating: 3
 
 - title: Desconecta
   author: Marc Masip
+  link:
   completed: '2019'
+  rating: 3
 
 - title: El orden del día
   author: Éric Vuillard
+  link:
   completed: '2019'
+  rating: 3
 
 - title: 50 líderes que hicieron historia
   author: Luis Huete y Javier García
+  link:
   completed: '2019'
+  rating: 3
 
 - title: El alma de los pulpos
   author: Sy Montgomery
+  link:
   completed: '2019'
+  rating: 3
 
 - title: La maleta de Ana
   author: Celia Santos
+  link:
   completed: '2019'
+  rating: 3
 
 - title: ¿Qué haremos cuando las máquinas lo hagan todo?
   author: M. Frank, P. Roehrig y B. Pring
+  link:
   completed: '2019'
+  rating: 3
 
 - title: Científicas
   author: Jorge Bolívar
+  link:
   completed: '2019'
+  rating: 4
 
 - title: wabi sabi. Aprender a aceptar la imperfección
   author: Tomás Navarro
+  link:
   completed: '2019'
+  rating: 4
 
 - title: Pretérito imperfecto
   author: Nieves Concostrina
+  link:
   completed: '2019'
+  rating: 3
 
 - title: Conversaciones con mi enano de jardín
   author: Jean-Paul Didierlaurent
+  link:
   completed: '2019'
+  rating: 5
 
 - title: Una historia de España
   author: Arturo Pérez-Reverte
+  link:
   completed: '2019'
+  rating: 5
 
 - title: La influencia silenciosa
   author: Roberto Brasero
+  link:
   completed: '2019'
+  rating: 4
 
 - title: Desde la sombra
   author: Juan José Millás
+  link:
   completed: '2019'
+  rating: 5
 
 - title: La biblioteca secreta
   author: Haruki Murakami
+  link:
   completed: '2019'
+  rating: 3
 
 - title: Hábitos atómicos
   author: James Clear
+  link:
   completed: '2019'
+  rating: 4
 
 - title: Historia de España contada para escépticos
   author: Juan Eslava Galán
+  link:
   completed: '2019'
+  rating: 4
 
 - title: Vigilancia permanente
   author: Edward Snowden
+  link:
   completed: '2019'
+  rating: 4
 
 - title: Sidi
   author: Arturo Pérez-Reverte
+  link:
   completed: '2019'
+  rating: 4
 
 - title: Reiníciate
   author: Antonio Fornés
+  link:
   completed: '2019'
+  rating: 2
 
 - title: Anatomía de un instante
   author: Javier Cercas
+  link:
   completed: '2019'
-
+  rating: 5
 
 #2018
 - title: «Los hombres que no amaban a las mujeres»
-  author: Stieg Larsson (8)
+  author: Stieg Larsson
+  link:
   completed: '2018'
+  rating: 4
 
 - title: «El resto de sus vidas»
-  author: Jean-Paul Didierlaurent (10)
+  author: Jean-Paul Didierlaurent
+  link:
   completed: '2018'
+  rating: 5
 
 - title: «El fuego invisible»
-  author: Javier Sierra (7)
+  author: Javier Sierra
+  link:
   completed: '2018'
+  rating: 4
 
 - title: «El Premio Nobel de Literatura»
-  author: Sture Allén y Kjell Espmark (6)
+  author: Sture Allén y Kjell Espmark
+  link:
   completed: '2018'
+  rating: 3
 
 - title: «Dublín de cerca»
-  author: Fionn Davenport (8)
+  author: Fionn Davenport
+  link:
   completed: '2018'
+  rating: 4
 
 - title: «Falcó»
   author: Arturo Pérez-Reverte
+  link:
   completed: '2018'
+  rating: 5
 
 - title: «Que nadie duerma»
   author: Juan José Millás
+  link:
   completed: '2018'
+  rating: 4
 
 - title: «Eva»
   author: Arturo Pérez-Reverte
+  link:
   completed: '2018'
+  rating: 5
 
 - title: «Historia mínima de España»
   author: Juan Pablo Fusi
+  link:
   completed: '2018'
+  rating: 3
 
 - title: «Sabotaje»
   author: Arturo Pérez-Reverte
+  link:
   completed: '2018'
+  rating: 4
 
 - title: «Sapiens. De animales a dioses»
   author: Yuval Noah Harari
+  link:
   completed: '2018'
+  rating: 5
 
 - title: «Jacquard's Web»
   author: James Essinger
+  link:
   completed: '2018'
+  rating: 5
 
 - title: «Momentos estelares de la historia de España»
   author: José Calvo Poyato
+  link:
   completed: '2018'
+  rating: 3
 
 - title: «La librería»
   author: Penelope Fitzgerald
+  link:
   completed: '2018'
+  rating: 2
 
 - title: «La vida secreta de las vacas»
   author: Rosamund Young
+  link:
   completed: '2018'
+  rating: 2
 
 - title: «La semana laboral de 4 horas»
   author: Timothy Ferriss
+  link:
   completed: '2018'
+  rating: 3
 
 - title: «Más tiempo para los más ocupados»
   author: Berto Pena
+  link:
   completed: '2018'
+  rating: 3
 
 - title: «Breves respuestas a las grandes preguntas»
   author: Stephen Hawking
+  link:
   completed: '2018'
+  rating: 3
 
 - title: «¿Qué es comer sano?»
   author: J.M. Mulet
+  link:
   completed: '2018'
+  rating: 4
 
 - title: «Homo Deus. Breve historia del mañana»
   author: Yuval Noah Harari
+  link:
   completed: '2018'
+  rating: 5
 
 #2017
-- title: «El laberinto de los espíritus» by Carlos Ruiz Zafón (8)
-- title: «Medicina sin engaños» by J.M. Mulet (8)
-- title: «Los nativos digitales no existen» by S. Lluna y J. Pedreira (8)
-- title: «La sociedad gaseosa» by Alberto Royo (10)
-- title: «El efecto matrimonio» de Graeme Simsion (7)
-- title: «Transgénicos sin miedo» de J.M. Mulet (9)
-- title: «Un año en Roma» de Anthony Doerr (7)
-- title: «Roma de cerca» de Duncan Garwood (8)
-- title: «Roma. Una historia cultural» de Robert Hughes (7)
-- title: «Los productos naturales ¡vaya timo!» de J.M. Mulet (8)
-- title: «Cuando llega la luz» de Clara Sánchez (9)
-- title: «Breve historia del mundo» de Ernst H. Gombrich (8)
-- title: «En la piel de una yihadista» de Anna Erelle (7)
-- title: «Historia y ciencia de los viajes en el tiempo» de José Antonio de la Peña (6)
-- title: «Cómo hacemos las cosas en IKEA» de Anders Dahlvig (7)
-- title: «Los secretos que jamás te contaron. Para vivir en este mundo y ser feliz cada día» de Albert Espinosa (6)
-- title: «Organízate con eficacia» de David Allen (9)
-- title: «Educative Innovéision» de Jordi Martí (7)
-- title: «La catedral de Turing» de George Dyson (8)
-- title: «No Plot? No Problem!» de Chris Baty (6)
-- title: «Las estrategias del narrador» de Silvia Adela Kohan (7)
-- title: «Estocolmo de cerca» de Becky Ohlsen (8)
+- title: «El laberinto de los espíritus»
+  author: Carlos Ruiz Zafón
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Medicina sin engaños»
+  author: J.M. Mulet
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Los nativos digitales no existen»
+  author: S. Lluna y J. Pedreira
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «La sociedad gaseosa»
+  author: Alberto Royo
+  link:
+  completed: '2017'
+  rating: 5
+
+- title: «El efecto matrimonio»
+  author: Graeme Simsion
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Transgénicos sin miedo»
+  author: J.M. Mulet
+  link:
+  completed: '2017'
+  rating: 5
+
+- title: «Un año en Roma»
+  author: Anthony Doerr
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Roma de cerca»
+  author: Duncan Garwood
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Roma. Una historia cultural»
+  author: Robert Hughes
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Los productos naturales ¡vaya timo!»
+  author: J.M. Mulet
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Cuando llega la luz»
+  author: Clara Sánchez
+  link:
+  completed: '2017'
+  rating: 5
+
+- title: «Breve historia del mundo»
+  author: Ernst H. Gombrich
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «En la piel de una yihadista»
+  author: Anna Erelle
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Historia y ciencia de los viajes en el tiempo»
+  author: José Antonio de la Peña
+  link:
+  completed: '2017'
+  rating: 3
+
+- title: «Cómo hacemos las cosas en IKEA»
+  author: Anders Dahlvig
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Los secretos que jamás te contaron. Para vivir en este mundo y ser feliz cada día»
+  author: Albert Espinosa
+  link:
+  completed: '2017'
+  rating: 2
+
+- title: «Organízate con eficacia»
+  author: David Allen
+  link:
+  completed: '2017'
+  rating: 5
+
+- title: «Educative Innovéision»
+  author: Jordi Martí
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «La catedral de Turing»
+  author: George Dyson
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «No Plot? No Problem!»
+  author: Chris Baty
+  link:
+  completed: '2017'
+  rating: 3
+
+- title: «Las estrategias del narrador»
+  author: Silvia Adela Kohan
+  link:
+  completed: '2017'
+  rating: 4
+
+- title: «Estocolmo de cerca»
+  author: Becky Ohlsen
+  link:
+  completed: '2017'
+  rating: 4
